k8s/specguard-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: specguard-frontend-service
spec:
  # type: NodePort
  type: ClusterIP
  selector:
    app: specguard-frontend
  ports:
  - port: 80
    targetPort: 80
