k8s/specguard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: specguard-ingress
  annotations:
    # 어떤 발급자를 통해 인증서를 발급받을지 결정한다.
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  # 라우팅 규칙을 적용할 인그레스 컨트롤러를 선택한다.
  ingressClassName: nginx
  # 인증서를 적용할 도메인을 설정한다.
  tls:
  - secretName: specguard-tls-secret
    hosts:
      # - specguard-backend.beyond.com
      - specguard-frontend.beyond.com
  # 호스트 기반의 라우팅(Host-Based Routing)
  # 하나의 인그레스에서 여러 도메인 이름에 대해 서로 다른 서비스로 라우팅한다.
  rules:
  # - host: specguard-backend.com
  #   http:
  #     paths:
  #     # Prefix는 사용자의 요청 경로가 지정된 경로(path)로 시작할 경우 일치한다.
  #     - pathType: Prefix
  #       # path는 작성한 경로를 기준으로 서비스로 요청을 라우팅한다.
  #       path: "/"
  #       # backend는 요청을 전달한 내부 서비스와 포트를 지정한다.
  #       backend:
  #         service:
  #           name: specguard-backend-service
  #           port: 
  #             number: 8088
  - host: specguard-frontend.beyond.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: specguard-frontend-service
            port:
              number: 80
